# hermpy-1.0.0

./: .gitignore  README.md  pyproject.toml
src/examples/: aberration.py  crossing_lists.py  download_data.py  multipanel_plots.py  plotting_timeseries.py  spice.py  using_spice.py
src/hermpy/: __init__.py
src/hermpy/data/: __init__.py  data-containers.py  lists.py  spectrograms.py  timeseries.py  trajectories.py
src/hermpy/net/: __init__.py  client_messenger.py  client_spice.py
src/hermpy/plotting/: __init__.py  boundary_models.py  panels.py
src/hermpy/utils/: __init__.py  constants.py  typing.py
src/tests/: net.py
