[project]
name = "hermpy"
version = "0.1.0"
description = "A collection of tools to aid in the creation of publication plots from spacecraft around Mercury."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "drms>=0.9.0",
    "h5netcdf>=1.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "mpl-animators>=1.2.4",
    "python-dateutil>=2.9.0.post0",
    "sunpy>=7.1.0",
    "zeep>=4.3.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
